# Cache_list

./: .gitignore  CMakeLists.txt  Makefile  README.md  application  cache.cpp  cache.hpp  test.txt  test_function.cpp
include/: cache_.hpp  cache_lfu.hpp  cache_perfect.hpp  page_t.hpp
tests/: CMakeLists.txt
tests/src/: test_function.cpp  test_lfu.cpp  test_perfect.cpp  time_test_lfu.cpp  time_test_perfect.cpp
tmp/: CMakeCache.txt  Makefile  cmake_install.cmake
tmp/tests/: Makefile  cmake_install.cmake  test_function
